[gd_scene load_steps=5 format=3 uid="uid://c3jwatioelitb"]

[ext_resource type="Script" path="res://scenes/multiplayerLevelManager/multiplayer_lobby.gd" id="1_mgpl0"]
[ext_resource type="PackedScene" uid="uid://dl44gyue63bn5" path="res://scenes/multiplayerLevelManager/no_match_gui.tscn" id="2_chv8a"]
[ext_resource type="PackedScene" uid="uid://c0gc1dt37hpes" path="res://scenes/multiplayerLevelManager/lobby_match_gui.tscn" id="3_r8hbf"]
[ext_resource type="PackedScene" uid="uid://cdp5lo7hga3qh" path="res://scenes/multiplayerLevelManager/ongoing_match_gui.tscn" id="4_pw7wl"]

[node name="MultiplayerLevelManager" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mgpl0")

[node name="NoMatchGUI" parent="." instance=ExtResource("2_chv8a")]
unique_name_in_owner = true

[node name="LobbyMatchGUI" parent="." instance=ExtResource("3_r8hbf")]
unique_name_in_owner = true

[node name="OngoingMatchGUI" parent="." instance=ExtResource("4_pw7wl")]
unique_name_in_owner = true
